Sat Jan 25 17:55:10 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Security/MT_IIOP_SSL/client.dsp:
	* orbsvcs/tests/Security/MT_IIOP_SSL/server.dsp: Added necessary 
	  libraries for linking.

Sat Jan 25 18:55:47 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Security/MT_IIOP_SSL/test_i.h: Fixed a compilation error.

Sat Jan 25 18:50:32 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Transport_Cache_Manager.cpp (close_i): Avoid totally
	  unaesthetic temporaries  in the for loop.

Sat Jan 25 18:30:27 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Security/MT_IIOP_SSL: A multi-threaded stress test
	  for IIOP_SSL which basically provides a insecure path for
	  communication incase an SSL connection cannot be setup. This
	  will also serve as a stress test for BUG 1421.

Sat Jan 25 18:06:51 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Transport_Cache_Manager.h:
	* tao/Transport_Cache_Manager.inl: Added an accessor for the hash
	  map used inside the Cache_Manager. Useful for writing regression
	  tests as we will demonstrate shortly in a test. 

Fri Jan 24 11:42:57 2003  Boris S Kolpackov  <boris@isis-server.isis.vanderbilt.edu>

	* orbsvcs/tests/Security/Crash_Test/run_test.pl: fixed yet another
          possible race conditions.

Fri Jan 24 10:59:49 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_interface_strategy.cpp:
        * TAO_IDL/util/utl_identifier.cpp:
        * TAO_IDL/util/utl_stack.cpp:

          Changed some deletes of strings to use either delete []
          or ACE::strdelete(), to eliminate some complaints from
          Linux valgrind. Thanks to Craig Rodrigues <crodrigu@bbn.com>
          for reporting the problem and for sending in patches.

Fri Jan 24 09:04:28 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
